--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mysql": "^2.9.0"
+    "colors": "^1.1.2",
+    "mysql": "^2.11.1",
+    "request": "^2.75.0"
   }
 }
