--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "mysql": "^2.11.1",
     "request": "^2.75.0"
