--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "mysql": "^2.11.1",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "word-wrap": "^1.1.0"
   }
 }
